changed openapi.yaml and regen code
