# s2gos-common/src/s2gos_common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-06-25T10:25:21+00:00
+#   timestamp: 2025-06-25T14:05:33+00:00
 
 from __future__ import annotations
 
@@ -38,15 +38,6 @@ class ConformanceDeclaration(BaseModel):
     conformsTo: list[str]
 
 
-class Response(Enum):
-    raw = "raw"
-    document = "document"
-
-
-class Type(Enum):
-    process = "process"
-
-
 class Link(BaseModel):
     href: str
     rel: Optional[str] = Field(None, examples=["service"])
@@ -57,6 +48,11 @@ class Link(BaseModel):
 
 class MaxOccurs(Enum):
     unbounded = "unbounded"
+
+
+class ResponseType(Enum):
+    raw = "raw"
+    document = "document"
 
 
 class Subscriber(BaseModel):
@@ -73,12 +69,16 @@ class Subscriber(BaseModel):
     failedUri: Optional[AnyUrl] = None
 
 
-class StatusCode(Enum):
+class JobStatus(Enum):
     accepted = "accepted"
     running = "running"
     successful = "successful"
     failed = "failed"
     dismissed = "dismissed"
+
+
+class JobType(Enum):
+    process = "process"
 
 
 class JobControlOptions(Enum):
@@ -92,7 +92,7 @@ class TransmissionMode(Enum):
     reference = "reference"
 
 
-class Type1(Enum):
+class DataType(Enum):
     array = "array"
     boolean = "boolean"
     integer = "integer"
@@ -175,9 +175,9 @@ class Capabilities(BaseModel):
 
 class JobInfo(BaseModel):
     processID: Optional[str] = None
-    type: Type
+    type: JobType
     jobID: str
-    status: StatusCode
+    status: JobStatus
     message: Optional[str] = None
     created: Optional[datetime] = None
     started: Optional[datetime] = None
@@ -220,7 +220,7 @@ class Schema(BaseModel):
     minProperties: Optional[conint(ge=0)] = 0
     required: Optional[list[str]] = Field(None, min_length=1)
     enum: Optional[list[dict[str, Any]]] = Field(None, min_length=1)
-    type: Optional[Type1] = None
+    type: Optional[DataType] = None
     not_: Optional[Union[Schema, Reference]] = Field(None, alias="not")
     allOf: Optional[list[Union[Schema, Reference]]] = None
     oneOf: Optional[list[Union[Schema, Reference]]] = None
@@ -297,7 +297,7 @@ class InlineOrRefValue(RootModel[Union[InlineValue, QualifiedValue, Link]]):
 class ProcessRequest(BaseModel):
     inputs: Optional[dict[str, Union[InlineOrRefValue, list[InlineOrRefValue]]]] = None
     outputs: Optional[dict[str, Output]] = None
-    response: Optional[Response] = Response.raw
+    response: Optional[ResponseType] = ResponseType.raw
     subscriber: Optional[Subscriber] = None
 
 
